add question by any auth user
