# public/swagger.json
@@ -181,6 +181,106 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"QuestionResponseDto": {
+				"properties": {
+					"uuid": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					},
+					"content": {
+						"type": "string"
+					},
+					"photos": {
+						"items": {
+							"properties": {
+								"mimetype": {
+									"type": "string"
+								},
+								"url": {
+									"type": "string"
+								}
+							},
+							"required": [
+								"mimetype",
+								"url"
+							],
+							"type": "object"
+						},
+						"type": "array"
+					},
+					"userId": {
+						"type": "number",
+						"format": "double"
+					},
+					"author": {
+						"$ref": "#/components/schemas/IProfile"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"uuid",
+					"title",
+					"content",
+					"userId",
+					"author",
+					"createdAt",
+					"updatedAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IServerResponse_QuestionResponseDto_": {
+				"properties": {
+					"status": {
+						"type": "boolean"
+					},
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"$ref": "#/components/schemas/QuestionResponseDto"
+					},
+					"error": {
+						"type": "string"
+					},
+					"errors": {
+						"items": {
+							"$ref": "#/components/schemas/DetailedError"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"status"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"NewQuestionDto": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"content": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"title",
+					"content"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
@@ -285,6 +385,42 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/ILoginDto"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/question/add": {
+			"post": {
+				"operationId": "AddQuestion",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IServerResponse_QuestionResponseDto_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Question Service"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/NewQuestionDto"
 							}
 						}
 					}
