# src/dto/NewQuestionDto.ts
@@ -1,0 +1,5 @@
+
+export interface NewQuestionDto {
+  title: string,
+  content: string,
+}
